# white-noise

./: Cargo.toml  README.md
.cargo/: config
.github/: dependabot.yml
src/: app.rs  audio.rs  config.rs  main.rs  tray.rs
