[package]
name = "rain-noise"
version = "0.2.0"
authors = ["johnf"]
edition = "2018"
description = "Plays rain white noise from the system tray"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systray = "0.4.0"
rodio = "0.11.0"
lazy_static = "1.4.0"
home = "0.5.3"
anyhow = "1.0.31"
toml = "0.5.6"
serde_derive = "1"
serde = "1"