[package]
name = "rain-noise"
version = "0.4.0"
authors = ["johnf"]
edition = "2018"
description = "A white noise machine. Only works on windows."
license = "MIT OR Apache-2.0"
repository = "https://github.com/bretzle/white-noise"
keywords = ["whitenoise"]
categories = ["command-line-utilities", "multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systray = "0.4.0"
rodio = "0.13.0"
home = "0.5.3"
anyhow = "1.0.31"
toml = "0.5.6"
serde_derive = "1"
serde = "1"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'